Iniciei minha lista de jogos favoritos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>repl.it</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+	<div id="container">
+		<h1 id="titulo">Meus Jogos Favoritos <span id="btnEditar" onclick="trocarTitulo()">✎</span></h1>
+
+         <ul id="lista">
+         <li>Free Fire</li>
+         <li>GTA V</li>
+         <li>Call Of Duty</li>
+         <li>Minecraft</li>
+        </ul>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
