--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="script.js"></script>
+	   
 </head>
 
 <body>
@@ -19,6 +21,8 @@
          <li>Minecraft</li>
         </ul>
     </div>
-    <script src="script.js"></script>
+      Aluno: Carlos Eduardo Doas Santos Dias<br>Turma: INFO 3B<br>Unidade Curricular: Linguagem e Técnicas de Programação
+    </div>
+	
   </body>
 </html>
